--- a/style.css
+++ b/style.css
@@ -18,14 +18,21 @@ body {
   margin: 20px auto;
 }
 
-.cymbal {
+.cymbal-hihat {
   position: absolute;
   top: 100px;
   left: 100px;
   transition: transform 0.2s;
 }
 
-.cymbal:hover {
+.cymbal-openhat {
+  position: absolute;
+  top: 29px;
+  left: 184px;
+  transition: transform 0.2s;
+}
+
+.cymbal-hihat:hover, .cymbal-openhat:hover {
   transform: translateY(5px);
 }
 
@@ -67,11 +74,18 @@ body {
   opacity: 0.6;
 }
 
-.cymbal-shape {
+.cymbal-shape, .cymbal-shape-shadow {
   background: var(--cymbal);
   border-radius: 50%;
   width: 150px;
   height: 90px;
   transform: rotate(-10deg);
+}
+
+.cymbal-shape {
   box-shadow: inset 0px 0px 0px 10px var(--cymbalborder);
+}
+
+.cymbal-shape-shadow {
+  box-shadow: inset 0px 0px 0px 10px var(--cymbalborder), -5px 5px 5px rgba(0,0,0,0.5);
 }
