--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --cymbal: #F9AE64;
   --cymbalborder: #DB995C;
-  --cymbalshinelight: #FFD7B2;
+  --cymbalshinelight: #ffe8cc;
   --cymbalshinedark: #846E5B;
   --cymbalcenter: #605040;
   --drumskin: #fff8ed;
@@ -17,12 +17,17 @@ body {
   background: radial-gradient(circle, rgba(112,116,147,1) 0%, rgba(0,19,52,1) 100%);
 }
 
+
+/* /////// DRUM KIT //////// */
+
 .drumkit {
   position: relative;
   width: 800px;
   height: 600px;
   margin: 20px auto;
 }
+
+/* //////  CYMBALS LEFT //////// */
 
 .cymbal-hihat {
   position: absolute;
@@ -38,7 +43,7 @@ body {
   transition: transform 0.2s;
 }
 
-.cymbal-hihat:hover, .cymbal-openhat:hover, .drum-tom:hover {
+.cymbal-hihat:hover, .cymbal-openhat:hover, .drum-tom:hover, .drum-snare:hover {
   transform: translateY(5px);
 }
 
@@ -64,6 +69,7 @@ body {
   border-top-left-radius: 16px;
   border-bottom-right-radius: 16px;
   box-shadow: 0px -2px 4px 0px var(--cymbalshinelight), -2px 2px 4px 0px var(--cymbalshinelight);
+  opacity: 0.6;
 }
 
 .cymbal-shine-dark {
@@ -89,17 +95,27 @@ body {
 }
 
 .cymbal-shape {
-  box-shadow: inset 0px 0px 0px 10px var(--cymbalborder);
+  box-shadow: inset 0px 0px 0px 15px var(--cymbalborder);
 }
 
 .cymbal-shape-shadow {
-  box-shadow: inset 0px 0px 0px 10px var(--cymbalborder), -5px 5px 5px rgba(0,0,0,0.5);
+  box-shadow: inset 0px 0px 0px 15px var(--cymbalborder), -5px 5px 5px rgba(0,0,0,0.5);
 }
+
+
+/* //////// DRUMS LEFT ///////// */
 
 .drum-tom {
   position: absolute;
   top: 125px;
   left: 268px;
+  transition: transform 0.2s;
+}
+
+.drum-snare {
+  position: absolute;
+  top: 216px;
+  left: 131px;
   transition: transform 0.2s;
 }
 
@@ -111,9 +127,8 @@ body {
   border: 3px solid var(--drumborder);
   transform: rotate(-10deg);
   box-shadow: 0px 3px 0px var(--drumborder),
-              0px 6px 0px #444444,
-              0px 9px 0px #444444,
-              0px 12px 0px var(--drumbody),
+              0px 8px 0px #545454,
+              0px 14px 0px var(--drumborder),
               0px 18px 0px var(--drumbody),
               0px 24px 0px var(--drumbody),
               0px 30px 0px var(--drumbody),
@@ -127,4 +142,27 @@ body {
               0px 60px 0px var(--drumbody),
               0px 66px 0px var(--drumbody),
               0px 72px 0px var(--drumbody);
+}
+
+.drum-snare .drum-skin {
+  width: 170px;
+  height: 100px;
+  border: 4px solid var(--drumborder);
+}
+
+.drum-shine {
+  width: 20px;
+  height: 57px;
+  border-radius: 25%;
+  background: rgba(255,255,255,0.5);
+  position: absolute;
+  left: 46px;
+  top: 107px;
+  filter: blur(4px);
+  transform: rotate(-10deg);
+}
+
+.drum-snare .drum-shine {
+  left: 55px;
+  top: 120px;
 }
