--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
   --kickhighlight1: #d87979;
   --kickhighlight2: #d36b6b;
   --kickhighlight3: #cc4f4f;
+  --letter: #1c242d;
 }
 
 body {
@@ -566,4 +567,65 @@ body {
   top: 129px;
   filter: blur(8px);
   transform: rotate(15deg);
+}
+
+.letter {
+  width: 54px;
+  height: 60px;
+  background: rgba(255,255,255,0.6);
+  color: var(--letter);
+  border: 2.5px solid var(--letter);
+  border-radius: 15px;
+  font-size: 49px;
+  font-family: monospace;
+  text-align: center;
+  position: absolute;
+}
+
+.letter-hihat {
+  position: absolute;
+  top: 92px;
+  left: 81px;
+}
+
+.letter-openhat {
+  position: absolute;
+  top: -20px;
+  left: 187px;
+}
+
+.letter-snare {
+  position: absolute;
+  top: 205px;
+  left: 201px;
+}
+
+.letter-tom {
+  position: absolute;
+  top: 83px;
+  left: 305px;
+}
+
+.letter-tom2 {
+  position: absolute;
+  top: 93px;
+  left: 493px;
+}
+
+.letter-kick {
+  position: absolute;
+  top: 289px;
+  left: 404px;
+}
+
+.letter-ride {
+  position: absolute;
+  top: -20px;
+  left: 596px;
+}
+
+.letter-boom {
+  position: absolute;
+  top: 247px;
+  left: 629px;
 }
