--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
   background: radial-gradient(circle, rgba(112,116,147,1) 0%, rgba(0,19,52,1) 100%);
 }
 
+/* ////////////////// TITLE + LETTERS /////////////////// */
+
 .title {
   background: rgba(255,255,255,0.6);
   color: var(--letter);
@@ -43,6 +45,67 @@ body {
   transform: rotate(-9deg);
   top: 416px;
   left: 30px;
+}
+
+.letter {
+  width: 54px;
+  height: 60px;
+  background: rgba(255,255,255,0.6);
+  color: var(--letter);
+  border: 2.5px solid var(--letter);
+  border-radius: 15px;
+  font-size: 49px;
+  font-family: monospace;
+  text-align: center;
+  position: absolute;
+}
+
+.letter-hihat {
+  position: absolute;
+  top: 92px;
+  left: 81px;
+}
+
+.letter-openhat {
+  position: absolute;
+  top: -20px;
+  left: 187px;
+}
+
+.letter-snare {
+  position: absolute;
+  top: 205px;
+  left: 201px;
+}
+
+.letter-tom {
+  position: absolute;
+  top: 83px;
+  left: 305px;
+}
+
+.letter-tom2 {
+  position: absolute;
+  top: 93px;
+  left: 493px;
+}
+
+.letter-kick {
+  position: absolute;
+  top: 289px;
+  left: 404px;
+}
+
+.letter-ride {
+  position: absolute;
+  top: -20px;
+  left: 596px;
+}
+
+.letter-boom {
+  position: absolute;
+  top: 247px;
+  left: 629px;
 }
 
 
@@ -603,65 +666,4 @@ body {
   top: 145px;
   filter: blur(8px);
   transform: rotate(15deg);
-}
-
-.letter {
-  width: 54px;
-  height: 60px;
-  background: rgba(255,255,255,0.6);
-  color: var(--letter);
-  border: 2.5px solid var(--letter);
-  border-radius: 15px;
-  font-size: 49px;
-  font-family: monospace;
-  text-align: center;
-  position: absolute;
-}
-
-.letter-hihat {
-  position: absolute;
-  top: 92px;
-  left: 81px;
-}
-
-.letter-openhat {
-  position: absolute;
-  top: -20px;
-  left: 187px;
-}
-
-.letter-snare {
-  position: absolute;
-  top: 205px;
-  left: 201px;
-}
-
-.letter-tom {
-  position: absolute;
-  top: 83px;
-  left: 305px;
-}
-
-.letter-tom2 {
-  position: absolute;
-  top: 93px;
-  left: 493px;
-}
-
-.letter-kick {
-  position: absolute;
-  top: 289px;
-  left: 404px;
-}
-
-.letter-ride {
-  position: absolute;
-  top: -20px;
-  left: 596px;
-}
-
-.letter-boom {
-  position: absolute;
-  top: 247px;
-  left: 629px;
 }
