--- a/style-compiled.css
+++ b/style-compiled.css
@@ -48,6 +48,7 @@ svg {
   font-family: monospace;
   text-align: center;
   position: absolute;
+  transition: all .07s ease; /* required for JS removeTransition */
 }
 .letter-hihat {
   top: 92px;
@@ -579,4 +580,11 @@ svg {
   top: 216px;
   height: 32px;
   transform: skew(-28deg) rotate(-15deg);
+}
+
+/* add class on keydown */
+.playing {
+  transform: scale(1.1);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
 }
