--- a/style.scss
+++ b/style.scss
@@ -73,6 +73,7 @@ svg {
   font-family: monospace;
   text-align: center;
   position: absolute;
+  transition: all .07s ease; /* required for JS removeTransition */
 }
 
 .letter-hihat {
@@ -770,6 +771,13 @@ svg {
   }
 }
 
+
+/* add class on keydown */
+.playing {
+  transform: scale(1.1);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
+}
 
 
 ///////////////////////////////////////////////////
