--- a/style-compiled.css
+++ b/style-compiled.css
@@ -45,7 +45,7 @@ svg {
   border: 2.5px solid #1c242d;
   border-radius: 15px;
   font-size: 49px;
-  font-family: monospace;
+  /* font-family: monospace; */
   text-align: center;
   position: absolute;
   transition: all .07s ease; /* required for JS removeTransition */
