--- a/style.scss
+++ b/style.scss
@@ -70,7 +70,7 @@ svg {
   border: 2.5px solid $letter;
   border-radius: 15px;
   font-size: 49px;
-  font-family: monospace;
+  // font-family: monospace;
   text-align: center;
   position: absolute;
   transition: all .07s ease; /* required for JS removeTransition */
