--- a/style-compiled.css
+++ b/style-compiled.css
@@ -4,7 +4,7 @@ body {
   /* fallback */
   background: radial-gradient(ellipse, rgba(240, 192, 96, 1) 0%, rgba(186, 118, 0, 1) 30%, rgba(19, 19, 19, 1) 71%, rgba(19, 19, 19, 1) 100%);
   /* fallback */
-  background: radial-gradient(ellipse, rgba(240, 192, 96, 0.6) 0%, rgba(186, 118, 0, 0.6) 30%, rgba(19, 19, 19, 0.8) 71%, rgba(19, 19, 19, 0.8) 100%), url("images/woodgrain-tile-dark-200.png") repeat;
+  background: radial-gradient(ellipse, rgba(240, 192, 96, 0.6) 0%, rgba(186, 118, 0, 0.6) 30%, rgba(19, 19, 19, 0.8) 71%, rgba(19, 19, 19, 0.8) 100%), url("https://github.com/AnwenW/js-drum-kit/blob/master/images/woodgrain-tile-dark-200.png?raw=true") repeat;
   background-attachment: fixed;
 }
 svg {
@@ -26,16 +26,6 @@ svg {
   font-family: monospace;
   position: absolute;
 }
-/* .text-play {
-  transform: rotate(-15deg);
-  top: 364px;
-  left: 32px;
-}
-.text-thedrums {
-  transform: rotate(-9deg);
-  top: 416px;
-  left: 30px;
-} */
 .letter-hihat, .letter-openhat, .letter-snare, .letter-tom, .letter-tom2, .letter-kick, .letter-ride, .letter-boom {
   /* extend/inheritance */
   width: 54px;
@@ -46,10 +36,10 @@ svg {
   border-radius: 15px;
   font-size: 49px;
   line-height: 1.18;
-  /* font-family: monospace; */
   text-align: center;
   position: absolute;
-  transition: all .05s ease; /* required for JS removeTransition */
+  transition: all 0.07s ease;
+  /* required for JS removeTransition */
 }
 .letter-hihat {
   top: 92px;
@@ -82,6 +72,12 @@ svg {
 .letter-boom {
   top: 247px;
   left: 629px;
+}
+/*///  JS keydown – add class  ///*/
+.playing {
+  transform: scale(1.1);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
 }
 /* ////////  DRUM KIT  /////// */
 .drumkit {
@@ -230,6 +226,18 @@ svg {
   border-right: 1.5px solid #545454;
   position: absolute;
 }
+/*//  JS keydown – drums (not kick drum) - move down  //*/
+@keyframes transformDown {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(5px);
+  }
+}
+.moveDown {
+  animation: transformDown 0.15s;
+}
 /* ////// LEFT DRUM - TOM /////// */
 .drum-tom {
   position: absolute;
@@ -343,8 +351,6 @@ svg {
 .drum-kick:hover {
   transform: translateY(-5px);
 }
-
-
 .drum-kick:hover ~ .drum-pedal {
   left: 396px;
   transform: rotate(-87deg) skewY(11deg);
@@ -354,7 +360,6 @@ svg {
   top: 380px;
   transform: rotate(-7deg);
 }
-
 .drum-kick-skin {
   transform: rotate(184deg);
   background: #fff8ed;
@@ -363,6 +368,67 @@ svg {
   height: 107px;
   border: 3px solid #bcbcbc;
   box-shadow: 0px 7px 0px #bcbcbc, 0px 14px 0px #545454, 0px 21px 0px #bcbcbc, 0px 28px 0px #cc3f3f, 0px 35px 0px #cc3f3f, 0px 42px 0px #cc4f4f, 0px 49px 0px #d36b6b, 0px 56px 0px #d87979, 0px 63px 0px #d36b6b, 0px 70px 0px #cc4f4f, 0px 77px 0px #cc3f3f, 0px 84px 0px #cc3f3f, 0px 91px 0px #cc3f3f, 0px 98px 0px #cc3f3f, 0px 105px 0px #cc3f3f, 0px 112px 0px #cc3f3f, -3px -6px 10px rgba(0, 0, 0, 0.4);
+}
+.drum-kick-clip1, .drum-kick-clip2, .drum-kick-clip3, .drum-kick-clip4, .drum-kick-clip5, .drum-kick-clip6 {
+  background: #bcbcbc;
+  width: 9px;
+  height: 34px;
+  border-right: 1.5px solid #545454;
+  position: absolute;
+}
+.drum-kick-clip1 {
+  left: 62px;
+  top: -110px;
+  transform: rotate(-11deg) skew(-15deg);
+}
+.drum-kick-clip2 {
+  left: 152px;
+  top: -112px;
+  transform: rotate(8deg) skew(5deg);
+}
+.drum-kick-clip3 {
+  left: 228px;
+  top: -89px;
+  transform: rotate(1deg) skewY(28deg);
+}
+.drum-kick-clip4 {
+  left: 58px;
+  top: -45px;
+  transform: rotate(-11deg) skew(-15deg);
+}
+.drum-kick-clip5 {
+  left: 149px;
+  top: -46px;
+  transform: rotate(8deg) skew(5deg);
+}
+.drum-kick-clip6 {
+  left: 226px;
+  top: -21px;
+  transform: rotate(1deg) skewY(28deg);
+}
+.drum-kick-shine {
+  transform: rotate(10deg);
+  width: 51px;
+  height: 71px;
+  border-radius: 39%;
+  background: rgba(255, 255, 255, 0.6);
+  position: absolute;
+  left: 85px;
+  top: -86px;
+  filter: blur(10px);
+}
+/*//  JS keydown – kick drum - move up  //*/
+@keyframes transformUp {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(-5px);
+  }
+}
+.moveUp {
+  animation: transformUp 0.15s;
+  animation-delay: 0.1s;
 }
 /* //// DRUM PEDAL  //// */
 .drum-pedal {
@@ -421,54 +487,34 @@ svg {
   background: #444;
   box-shadow: inset -1px 4px 4px -1px rgba(255, 255, 255, 0.6);
 }
-/* ////// */
-.drum-kick-clip1, .drum-kick-clip2, .drum-kick-clip3, .drum-kick-clip4, .drum-kick-clip5, .drum-kick-clip6 {
-  background: #bcbcbc;
-  width: 9px;
-  height: 34px;
-  border-right: 1.5px solid #545454;
-  position: absolute;
+/*//  JS keydown – drum pedal and beater – animation  //*/
+@keyframes transformPedal {
+  0% {
+    left: 394px;
+    transform: rotate(-87deg) skewY(7deg);
+  }
+  100% {
+    left: 396px;
+    transform: rotate(-87deg) skewY(11deg);
+  }
 }
-.drum-kick-clip1 {
-  left: 62px;
-  top: -110px;
-  transform: rotate(-11deg) skew(-15deg);
+.pedalDown {
+  animation: transformPedal 0.15s;
 }
-.drum-kick-clip2 {
-  left: 152px;
-  top: -112px;
-  transform: rotate(8deg) skew(5deg);
+@keyframes transformBeater {
+  0% {
+    left: 413px;
+    top: 388px;
+    transform: rotate(-53deg);
+  }
+  100% {
+    left: 429px;
+    top: 380px;
+    transform: rotate(-7deg);
+  }
 }
-.drum-kick-clip3 {
-  left: 228px;
-  top: -89px;
-  transform: rotate(1deg) skewY(28deg);
-}
-.drum-kick-clip4 {
-  left: 58px;
-  top: -45px;
-  transform: rotate(-11deg) skew(-15deg);
-}
-.drum-kick-clip5 {
-  left: 149px;
-  top: -46px;
-  transform: rotate(8deg) skew(5deg);
-}
-.drum-kick-clip6 {
-  left: 226px;
-  top: -21px;
-  transform: rotate(1deg) skewY(28deg);
-}
-.drum-kick-shine {
-  transform: rotate(10deg);
-  width: 51px;
-  height: 71px;
-  border-radius: 39%;
-  background: rgba(255, 255, 255, 0.6);
-  position: absolute;
-  left: 85px;
-  top: -86px;
-  filter: blur(10px);
+.beaterHit {
+  animation: transformBeater 0.15s;
 }
 /* /////  RIGHT DRUM - TOM2  /////// */
 .drum-tom2 {
@@ -585,73 +631,4 @@ svg {
   top: 216px;
   height: 32px;
   transform: skew(-28deg) rotate(-15deg);
-}
-
-
-
-
-
-/* add class on keydown */
-.playing {
-  transform: scale(1.1);
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
-}
-
-
-@keyframes transformUp {
-  0%   {
-    transform: translateY(0px);
-  }
-  100% {
-    transform: translateY(-5px);
-  }
-}
-
-.moveUp {
-  animation: transformUp 0.15s;
-  animation-delay: 0.1s;
-}
-
-@keyframes transformDown {
-  0%   {
-    transform: translateY(0px);
-  }
-  100% {
-    transform: translateY(5px);
-  }
-}
-
-.moveDown {
-  animation: transformDown 0.15s;
-}
-
-@keyframes transformPedal {
-  0% {
-    left: 394px;
-    transform: rotate(-87deg) skewY(7deg);
-  }
-  100% {
-    left: 396px;
-    transform: rotate(-87deg) skewY(11deg);
-  }
-}
-.pedalDown {
-  animation: transformPedal 0.15s;
-}
-
-@keyframes transformBeater {
-  0% {
-    left: 413px;
-    top: 388px;
-    transform: rotate(-53deg);
-  }
-  100% {
-    left: 429px;
-    top: 380px;
-    transform: rotate(-7deg);
-  }
-}
-.beaterHit {
-  animation: transformBeater 0.15s;
 }
