--- a/style.scss
+++ b/style.scss
@@ -42,26 +42,26 @@ svg {
 /* ///////  TITLE + LETTERS ///////// */
 
 .title {
-  background: rgba(255,255,255,0.6);
-  color: $letter;
-  text-transform: uppercase;
-  padding: 5px 10px;
-  font-size: 34px;
-  font-family: monospace;
   position: absolute;
+  font-size: 34px;
+  color: $keydown;
+  opacity: 0.8;
+  letter-spacing: 1px;
+  font-family: 'Vampiro One', monospace;
+  text-shadow: 3px 5px 5px rgba(0,0,0,0.6);
 }
 
-// .text-play {
-//   transform: rotate(-15deg);
-//   top: 364px;
-//   left: 32px;
-// }
-//
-// .text-thedrums {
-//   transform: rotate(-9deg);
-//   top: 416px;
-//   left: 30px;
-// }
+.text-play {
+  transform: rotate(-6deg);
+  top: 425px;
+  left: 12px;
+}
+
+.text-thedrums {
+  transform: rotate(-2deg);
+  top: 456px;
+  left: 35px;
+}
 
 %letter { /* extend/inheritance */
   width: 54px;
